# OpenLocus

./: Cargo.toml
crates/openlocus-ast/: Cargo.toml
crates/openlocus-ast/src/: chunk.rs  lib.rs  symbol.rs
crates/openlocus-cli/: Cargo.toml
crates/openlocus-cli/src/: lib.rs
crates/openlocus-graph/: Cargo.toml
crates/openlocus-graph/src/: graph.rs  lib.rs  materialize.rs
crates/openlocus-index/src/: manifest.rs  persistent.rs
crates/openlocus-provider/: Cargo.toml
crates/openlocus-provider/src/: audit.rs  cache.rs  dense_store.rs  gate.rs  lib.rs  mock.rs  model.rs  provider.rs
crates/openlocus-store/: Cargo.toml
crates/openlocus-store/src/: conservative.rs  lib.rs  tdb_adapter.rs  tdb_placeholder.rs
docs/: final-research-report.md  research-log.md  research-summary.md
eval/: ast_chunking_smoke.py  ast_quality_bakeoff.py  graph_smoke.py  incremental_index_smoke.py  persistent_index_smoke.py  provider_dense_safety.py  real_repo_incremental_bench.py  score.py  storage_bakeoff.py  synthetic_slo_bench.py
