[package]
name = "openlocus-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
tdb = ["dep:triviumdb"]

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
openlocus-core = { path = "../openlocus-core" }
openlocus-repo = { path = "../openlocus-repo" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
triviumdb = { version = "=0.7.0", optional = true }

[dev-dependencies]
tempfile.workspace = true
